@@ -40,6 +40,7 @@ Copyright_License {
 #include "Weather/Features.hpp"
 #include "Components.hpp"
 #include "Task/ProtectedTaskManager.hpp"
+#include "Airspace/ProtectedAirspaceWarningManager.hpp"
 #include "Interface.hpp"
 #include "UIGlobals.hpp"
 
@@ -79,6 +80,7 @@ class MapItemListWidget final
   enum Buttons {
     SETTINGS,
     GOTO,
+    ACK,
   };
 
   const MapItemList &list;
@@ -90,6 +92,7 @@ class MapItemListWidget final
   const MapSettings &settings;
 
   WndButton *settings_button, *details_button, *cancel_button, *goto_button;
+  WndButton *ack_button;
 
 public:
   void CreateButtons(WidgetDialog &dialog);
@@ -114,9 +117,11 @@ protected:
     const unsigned current = GetCursorIndex();
     details_button->SetEnabled(HasDetails(*list[current]));
     goto_button->SetEnabled(CanGotoItem(current));
+    ack_button->SetEnabled(CanAckItem(current));
   }
 
   void OnGotoClicked();
+  void OnAckClicked();
 
 public:
   /* virtual methods from class Widget */
@@ -146,6 +151,18 @@ public:
       item.type == MapItem::WAYPOINT;
   }
 
+  bool CanAckItem(unsigned index) const {
+    return CanAckItem(*list[index]);
+  }
+
+  static bool CanAckItem(const MapItem &item) {
+    const AirspaceMapItem &as_item = (const AirspaceMapItem &)item;
+
+    return item.type == MapItem::AIRSPACE &&
+      GetAirspaceWarnings() != nullptr &&
+      !GetAirspaceWarnings()->get_ack_day(*as_item.airspace);
+  }
+
   virtual void OnActivateItem(unsigned index) override;
 
   /* virtual methods from class ActionListener */
@@ -157,6 +174,7 @@ MapItemListWidget::CreateButtons(WidgetDialog &dialog)
 {
   settings_button = dialog.AddButton(_("Settings"), *this, SETTINGS);
   goto_button = dialog.AddButton(_("Goto"), *this, GOTO);
+  ack_button = dialog.AddButton(_("Ack Day"), *this, ACK);
   details_button = dialog.AddButton(_("Details"), mrOK);
   cancel_button = dialog.AddButton(_("Close"), mrCancel);
 }
@@ -223,6 +241,15 @@ MapItemListWidget::OnGotoClicked()
   cancel_button->OnClicked();
 }
 
+inline void
+MapItemListWidget::OnAckClicked()
+{
+  const AirspaceMapItem &as_item = *(const AirspaceMapItem *)
+    list[GetCursorIndex()];
+  GetAirspaceWarnings()->acknowledge_day(*as_item.airspace);
+  UpdateButtons();
+}
+
 void
 MapItemListWidget::OnAction(int id)
 {
@@ -232,6 +259,10 @@ MapItemListWidget::OnAction(int id)
     break;
   case GOTO:
     OnGotoClicked();
+    break;
+
+  case ACK:
+    OnAckClicked();
     break;
   }
 }
