@@ -18,6 +18,7 @@ Version 6.6 - not yet released
   - waypoint details button in target dialog (#1967)
   - show distance in radial InfoBox comment (#2577)
   - new InfoBox with radial and distance in nautical miles (#2269)
+  - add airspace ack button to map item list (#2139)
 * tasks
   - MAT tasks (#563)
   - custom symmetric quadrant (#2125)
